# amethyst_snake

./: Cargo.toml  README.md  copy_assets.sh
assets/: bindings.ron  display_config.ron
assets/sprites/: snake.ron
src/: game_over.rs  main.rs  snake.rs
src/components/: apple.rs  game_position.rs  mod.rs  snake_head.rs  snake_part.rs
src/systems/: apple_handler.rs  input.rs  mod.rs  move_snake.rs  snake_collision.rs  snake_render.rs  transform_positions.rs
