[package]
name = "snake"
version = "0.0.1"
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = { version = "0.4.8", features = ["serde"] }
nalgebra-glm = "0.7.0"
rand = "0.7.3"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
